# Pybind11-GBM

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml  requirements.txt  setup.py  test_simulation.py
datasets/: APPL_historicals_5Y.csv
src/: CMakeLists.txt
src/cpp/: simulation.cpp
src/gbmapp/: __init__.py
src/gbmapp/core/: models.py  service.py  validation.py
src/gbmapp/cpp/: bindings.cpp  simulation.cpp  simulation_common.h  simulation_mt.cpp  simulation_scalar.cpp  simulation_simd.cpp
src/gbmapp/data/: io.py
src/gbmapp/gui/: app.py  mainframe.py  plots.py  theme.py  widgets.py
src/gbmapp/native/: __init__.py  _dispatch.py
src/gbmapp/pylogic/: utilities.py
src/gui/: mainframe.py
src/pylogic/: utilities.py
