[build-system]
requires = ["setuptools>=68", "wheel", "pybind11>=2.12"]
build-backend = "setuptools.build_meta"

[project]
name = "gbmapp"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = ["numpy>=1.24"]

[project.scripts]
gbmapp = "gbmapp.gui.mainframe:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]